--- a/www/src/css/themes.css
+++ b/www/src/css/themes.css
@@ -51,7 +51,7 @@
     }
 
     /* Sidebar right */
-    .sidebar-user-list {
+    .sidebar-right {
         border-color: rgb(55, 65, 81);
     }
 
